--- a/man/neurowm.1
+++ b/man/neurowm.1
@@ -276,7 +276,7 @@ A neurowm configuration is just a big struct of type \f[I]WMConfig\f[]. This str
 #include <neuro/neurowm.h>
 
 int\ main()\ {
-\ \ \ \ return\ neurowm(\&defWMConfig\);
+\ \ \ \ return\ neurowm(\&defWMConfig);
 }
 \f[]
 .fi
