actions: Added support to chain actions

--- a/man/neurowm.1
+++ b/man/neurowm.1
@@ -203,6 +203,11 @@ move client to workspace N
 .RS
 .RE
 .TP
+.B mod-control-[0..9]
+move client to workspace N and follow
+.RS
+.RE
+.TP
 .B mod-shift-q
 quit neurowm
 .RS
