wm: Renamed neurowm module to wm

--- a/man/neurowm.1
+++ b/man/neurowm.1
@@ -281,7 +281,7 @@ A neurowm configuration is just a big struct of type \f[I]WMConfig\f[]. This str
 #include <neuro/neurowm.h>
 
 int\ main()\ {
-\ \ \ \ return\ NeuroNeurowmRun(&NeuroConfigConfiguration);
+\ \ \ \ return\ NeuroWmRun(&NeuroConfigConfiguration);
 }
 \f[]
 .fi
